changed site meta title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- Primary Meta Tags -->
-    <title>Vixvoo Project Management | Dallas Fort Worth DFW Texas Professional Services</title>
+    <title>VIXVOO</title>
     <meta name="title" content="Vixvoo Project Management | Dallas Fort Worth DFW Texas Professional Services">
     <meta name="description" content="Premier project management services in Dallas Fort Worth DFW Texas. Vixvoo delivers expert project coordination and management solutions for businesses across the Dallas-Fort Worth metroplex.">
     <meta name="keywords" content="dallas, texas, project management, fort worth, vixvoo, forth worth, DFW, dallas fort-worth, project coordinator, business solutions, metroplex">
