--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <body class="overflow-y-hidden">
 
 <header class="lad-heading">
-  <h1 class="font-2">VIXVOO</h1>
-  <h2 class="font-2"></h2>
+  <h1 class="font-2">V I X V O O</h1>
+  <h2 class="font-2">INFOVIXVOO@GMAIL.COM</h2>
 </header>
 <main class="main"></main>
     <footer class="lad-footer">
