--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 <body class="overflow-y-hidden">
 
 <header class="lad-heading">
-  <h1 class="font-2">V    I   X    V    O    O</h1>
-  <h2 class="font-2">INFOVIXVOO@GMAIL.COM</h2>
+  <h1 class="font-2">V I X V O O</h1>
+  <h2 class="font-2">A PROJECT MGT. FIRM</h2>
+  <h3 class="font-2">INFOVIXVOO@GMAIL.COM</h3> 
 </header>
 <main class="main"></main>
     <footer class="lad-footer">
