--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <header class="lad-heading">
   <h1 class="font-2">V I X V O O</h1>
-  <h2 class="font-2">A PROJECT MGT. FIRM</h2>
+  <h2 class="font-2"></h2>
  
 </header>
 <main class="main"></main>
@@ -44,7 +44,6 @@
         <div class="row">
           <div class="col-12 font-2 lad-education">
             <div>
-                                 <p>A: PO BOX 14, PALMER, TX 75152</p>
                  <p></p>
                  <p></p>
             </div>
